Updated jquery-svgpan.js used in demos
https://github.com/talos/jquery-svgpan/commit/729c04dfb909eceb6f24af8d4c
1a955c92f2692a

--- a/demos/newick.html
+++ b/demos/newick.html
@@ -8,7 +8,7 @@
 		body { font-family: sans-serif; }
 	</style>
 	<script src="jquery.js"></script>
-    <script type="text/javascript" src="jquery-svgpan.min.js"></script>
+    <script type="text/javascript" src="jquery-svgpan.js"></script>
 
 	<script src="../treelib.js"></script>	
 </head>
