--- a/demos/nexus.html
+++ b/demos/nexus.html
@@ -8,7 +8,7 @@
 		body { font-family: sans-serif; }
 	</style>
 	<script src="jquery.js"></script>
-    <script type="text/javascript" src="jquery-svgpan.min.js"></script>
+    <script type="text/javascript" src="jquery-svgpan.js"></script>
 
 	<script src="../nexus.js"></script>	
 	<script src="../treelib.js"></script>	
@@ -145,7 +145,7 @@ END;
 	</div>
 
 	<p><span id="message"></span></p>
-	<div style="width:500px;height:500px;background-color:white;border:1px solid rgb(228,228,228);">
+	<div style="width:500px;height:500px;background-color:white;border:1px solid rgb(228,228,228);background:url(g1001cc2.gif);"">
 	<svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1" height="500" width="500">
 		<g id="viewport">
 		</g>
